Implement javascript to load OSM map

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
          <title>Vote results in Leipzig</title>
     </head>
     <body>
-        <h1>Vote Summary</h1>
+        <h1>Wahlergebnisse Stadtratswahl 2024</h1>
         <h2>{{ vote_name }}</h2>
         {% for record in vote_records %}
             <h3>Municipality: {{ record.name_muni }}</h3>
