Round percentages before parsing geojson

--- a/templates/map.html
+++ b/templates/map.html
@@ -10,32 +10,8 @@
          <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
          <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
          <!-- TODO: externalize in css file -->
-         <style>
-            #map_lpz { height: 1000px; width: 60%; position: relative; }
-            #info { 
-                padding: 6px 8px;
-                font: 14px/16px Arial, Helvetica, sans-serif;
-                background: white;
-                background: rgba(255,255,255,0.8);
-                box-shadow: 0 0 15px rgba(0,0,0,0.2);
-                border-radius: 5px;
-            }
-            #info h4 {
-                margin: 0 0 5px;
-                color: #777;
-            }
-            #legend {
-                line-height: 18px;
-                color: #555;
-                }
-            #legend i {
-                width: 18px;
-                height: 18px;
-                float: left;
-                margin-right: 8px;
-                opacity: 0.7;
-            }
-        </style>
+         <link rel="stylesheet" href="/assets/map.css">
+         <style>#map_lpz { height: 1000px; width: 60%; position: relative; }</style>
     </head>
     <body>
         <h1>Stadtratswahl 2024</h1>
