--- a/assets/map.css
+++ b/assets/map.css
@@ -17,11 +17,14 @@
 .legend {
     line-height: 18px;
     color: #555;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
     }
 
 .legend i {
-    width: 18px;
-    height: 18px;
+    width: 32px;
+    height: 32px;
     float: left;
     margin-right: 8px;
     opacity: 0.7;
