--- a/templates/map.html
+++ b/templates/map.html
@@ -9,7 +9,8 @@
 
          <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
          <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-         <!-- TODO: externalize in css file -->
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
+
          <link rel="stylesheet" href="/assets/map.css">
          <style>#map_lpz { height: 1000px; width: 60%; position: relative; }</style>
     </head>
