--- a/assets/map.css
+++ b/assets/map.css
@@ -29,3 +29,13 @@
     margin-right: 8px;
     opacity: 0.9;
 }
+
+.polygon-label {
+    background: none;
+    border: none;
+    box-shadow: none;
+    /* font-weight: bold; */
+    opacity: 0.7;
+    font-size: 10px;
+    text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+}
