--- a/assets/map.css
+++ b/assets/map.css
@@ -23,8 +23,8 @@
     }
 
 .legend i {
-    width: 32px;
-    height: 32px;
+    width: 18px;
+    height: 18px;
     float: left;
     margin-right: 8px;
     opacity: 0.9;
@@ -38,4 +38,26 @@
     opacity: 0.7;
     font-size: 10px;
     text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+}
+
+.legend-columns {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    width: calc(50% - 5px); /* Adjust based on your preference */
+}
+
+.legend-item i {
+    width: 12px;
+    height: 12px;
+    margin-right: 4px;
+}
+
+.legend-item span {
+    white-space: nowrap;
 }
