--- a/templates/map.html
+++ b/templates/map.html
@@ -15,7 +15,7 @@
          <style>#map_lpz { height: 1000px; width: 60%; position: relative; }</style>
     </head>
     <body>
-        <h1>Stadtratswahl 2024</h1>
+        <h1>{{DATA_TITLE}}</h1>
 
         <div id="map_lpz"></div>
     </body>
