Create a page for summary statistics

--- a/templates/main.html
+++ b/templates/main.html
@@ -46,7 +46,7 @@
         <a href="/maps/2024_Europawahl" class="button">Europawahl 2024</a>
         
         <h2>Zusammenfassung</h2>
-        <a href="/summary" class="button">Statistiken anzeigen</a>
+        <a href="/Ergebnisse" class="button">Statistiken anzeigen</a>
         
         <h2>Über das Projekt</h2>
         <p>Diese Anwendung visualisiert Wahlergebnisse für verschiedene Wahlen in Leipzig nach Stadtteilen. 
