Adjust screen size

--- a/assets/map.css
+++ b/assets/map.css
@@ -1,4 +1,21 @@
-.map_lpz { height: 1000px; width: 60%; position: relative; }
+.map_lpz { 
+    height: 100vh; 
+    width: 100vw; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .map_lpz {
+        width: 100%;
+        height: 100%;
+    }
+}
 
 .info { 
     padding: 6px 8px;
