--- a/templates/main.html
+++ b/templates/main.html
@@ -55,7 +55,10 @@
             einen Vergleich der Stadtteile nach Parteienpräferenzen.</p>
 
         <h2>Quellen</h2>
-        <p>Diese Anwendung visualisiert Wahlergebnisse für verschiedene Wahlen in Leipzig nach Stadtteilen. Wählen Sie eine der obigen Optionen, um detaillierte Karten oder Zusammenfassungen zu sehen.</p>
+        <p>Daten bereitgestellt von: <a href="https://opendata.leipzig.de/" target="_blank" rel="noopener noreferrer">Stadt Leipzig Open Data Portal</a></p>
+        <p>Lizenz: <a href="http://www.govdata.de/dl-de/by-2-0" target="_blank" rel="noopener noreferrer">dl-de/by-2-0</a></p>
+
+
     </div>
 </body>
 </html>
