--- a/templates/map.html
+++ b/templates/map.html
@@ -12,7 +12,15 @@
          <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
 
          <link rel="stylesheet" href="/assets/map.css">
-         <style>#map_lpz { height: 1000px; width: 60%; position: relative; }</style>
+         <style>
+            #map_lpz { 
+                height: 100vh; 
+                width: 100%; 
+                position: absolute; 
+                top: 0;
+                left: 0;
+            }
+            </style>
     </head>
     <body>
         <h1>{{DATA_TITLE}}</h1>
