Extend views with Landtagswahl

--- a/templates/main.html
+++ b/templates/main.html
@@ -44,6 +44,7 @@
         <h2>Karten</h2>
         <a href="/maps/2024_Stadtratswahl" class="button">Stadtratswahl 2024</a>
         <a href="/maps/2024_Europawahl" class="button">Europawahl 2024</a>
+        <a href="/maps/2024_Landtagswahl" class="button">Landtagswahl 2024</a>
         
         <h2>Zusammenfassung</h2>
         <a href="/Ergebnisse" class="button">Statistiken anzeigen</a>
